# opencv_cascade_example

./: CMakeLists.txt  Makefile  PlateDetection.cpp  PlateDetection.h  PlateInfo.h  README.md  TEST_Detection  deljpg.sh  install_opencv.sh  main.cpp  main_back.cpp  test  test.cpp  util.h
model/: my_cascade.xml
opencv-haar-classifier-training/: negatives.txt  positives.txt
opencv-haar-classifier-training/classifier/: stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
opencv-haar-classifier-training/samples/: pos01.jpg.vec  pos02.jpg.vec  pos04.jpg.vec  pos05.jpg.vec  pos06.jpg.vec  pos07.jpg.vec  pos08.jpg.vec
